--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0" />
-  <title>iTunes Search by React</title>
+  <title>彩票系统</title>
   <script type="text/javascript">
         (function(doc, win) {
             var docEl = doc.documentElement,
