--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0" />
   <title>彩票系统</title>
+  <link rel="stylesheet" type="text/css" href="./dist/main.css" />
   <script type="text/javascript">
         (function(doc, win) {
             var docEl = doc.documentElement,
